--- a/views/publish/main.html
+++ b/views/publish/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Kafka Magic</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="./controller.js"></script>
+    <script src="controller.js"></script>
 </head>
 
 <body ng-app="app">
