--- a/views/publish/main.html
+++ b/views/publish/main.html
@@ -8,15 +8,15 @@
 </head>
 
 <body ng-app="app">
-<h1>Kafka Magic</h1>
 <div ng-controller="cntlr">
-    <h3>{{response}}</h3>
-    <h3>{{response1}}</h3>
-    <input type="text" ng-model="hostname" placeholder="Host name"/><br>
-    <input type="text" ng-model="port" placeholder="Port"/><br>
-    <input type="text" ng-model="topic" placeholder="topic"/><br>
-    <input type="text" ng-model="message" placeholder="Message"/><br>
-    <button type="button" ng-click="sendMessage()">Send Message</button>
+    <h3 align="center">{{response}}</h3>
+    <table align="center">
+        <tr><th><u>{{host}}</u></th></tr>
+        <tr><th><u>{{topic}}</u></th></tr>
+        <tr><td style="text-align: center"><input type="text" ng-model="message" placeholder="Message" style=" text-align: center; width: 150px; height: 150px"/></td></tr>
+        <tr><td style="text-align: center"><div><button type="button" ng-click="sendMessage()">Send Message</button></div> </td></tr>
+    </table>
+
 
 </div>
 </body>
